# Parse-SQL-2-JSON

./: .gitignore  .pylintrc  makefile  pyproject.toml  readme.md
.github/workflows/: continuous_integration.yaml  continuous_integration.yml
src/: __init__.py
src/sql_2_json/: Sql.g4  Sql.interp  Sql.tokens  SqlLexer.interp  SqlLexer.py  SqlListener.py  SqlParser.py  __init__.py  sql_2_json.py
src/sql_2_json/.antlr/: Sql.interp  SqlLexer.interp  SqlLexer.java  SqlLexer.tokens  SqlParser.java
src/sql_2_json/parser/: exceptions.py
tests/sql_2_json/: test_from.py  test_select.py  test_sql_2_json.py  test_where.py
